# cmake4libs

./: README.md
curl/lib/x86/: libcurl_imp.lib
jasper/src/msvc/: imgcmp.vcproj  imginfo.vcproj  jasper.sln  jasper.vcproj  jiv.vcproj  libjasper.vcproj
jasper/src/msvc/Win32_Release/: libjasper.lib
jasper/src/msvc/imgcmp___Win32_Release/: BuildLog.htm  mt.dep  vc90.idb
jasper/src/msvc/imginfo___Win32_Release/: BuildLog.htm  vc90.idb
jasper/src/msvc/jasper___Win32_Release/: BuildLog.htm  mt.dep  vc90.idb
jasper/src/msvc/jiv___Win32_Release/: BuildLog.htm  vc90.idb
jasper/src/msvc/libjasper___Win32_Release/: BuildLog.htm  vc90.idb
libiconv/: CMakeLists.txt
libiconv/cmake/: configure.cmake  iconv.h.cmake
libiconv/include/: iconv.h
libkml/: CMakeLists.txt
